--- a/src/components/pages/projects/Projects.css
+++ b/src/components/pages/projects/Projects.css
@@ -7,6 +7,7 @@
     text-align: justify;
     min-height: 100%;
     height: 100%;
+    width: 100%;
 }
 
 .projects-heading-text{
@@ -19,6 +20,7 @@
     justify-content: space-around;
     flex-wrap: wrap;
     margin: 48px;
+    width: 100%;
 }
 
 @media screen and (max-width: 960px){
